# claude-usage-widget

./: .gitignore  LICENSE  README.md  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.claude/: launch.json
.github/workflows/: release.yml
design/: Glass Instrument Spec.dc.html  README.md  design-chat-transcript.md
docs/: e2e-checklist.md  monetization.md
scripts/: claude-statusline-shim.sh  install.sh
src/: App.tsx  config.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/data/: format.test.ts  format.ts  insights.test.ts  insights.ts  license.ts  pricing.ts  scanCore.ts  skills.ts  source.test.ts  source.ts
src/export/: usageLog.test.ts  usageLog.ts
src/platform/: dragGeom.test.ts  dragGeom.ts  native.ts  selftest.ts  window.ts
src/state/: store.test.ts  store.tsx  types.ts
src/theme/: paidContent.ts  tokens.test.ts  tokens.ts  useTheme.ts
src/widget/: ErrorBoundary.tsx  Panel.tsx  Pill.tsx  Ring.tsx  SetupCard.tsx  UsageWidget.tsx  meterVisuals.tsx
src/widget/tabs/: EditTab.tsx  HistoryTab.tsx  LimitsTab.tsx  SkillsTab.tsx  ThemeTab.tsx
workers/license/: worker.js  wrangler.toml
