[package]
name = "claude-usage-widget"
version = "0.1.0"
description = "Always-on-top desktop widget for Claude usage limits"
edition = "2021"

[lib]
name = "claude_usage_widget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.6"

[target."cfg(target_os = \"macos\")".dependencies]
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSResponder", "NSGraphics"] }
